--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ authors = ["Oleg Gaidarenko <markelog@gmail.com>"]
 repository = "https://github.com/markelog/eclectica"
 homepage = "https://github.com/markelog/eclectica#readme"
 documentation = "https://github.com/markelog/eclectica#readme"
-description = "Cool and eclectic version manager for any language (ruby, rust, node.js, golang)"
+description = "Cool and eclectic version manager for any language"
 build = "build.rs"
-include = ["install.sh", "build.rs", "Cargo.toml", "for-rust.sh", "src/*.rs"]
+include = ["scripts/*.sh", "build.rs", "Cargo.toml", "for-rust.sh", "src/*.rs"]
 keywords = [
   "eclectica",
   "version",
